fixed dark mode

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -6,6 +6,7 @@
     --secondary-color: #595959;
     --accent1-color: #DCE0D9;
     --accent2-color: #601600b2;
+    --colores : #962705;
   
     /* change the values below to your chosen font(s) */
     --heading-font: 'IM Fell French Canon SC', serif;
